Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-04-02 (SVN):
    * keys.c (Key_Message): move backspace handling before non-printable
      check. (the functionality doesn't change. from tyrquake git repo.)

2013-03-30 (SVN):
    * scripts/ax_pthread.m4: update from mainstream savannah git repo.

2013-03-15 (1.5.6-final / SVN):
    * r_part.c (R_EntityParticles): fix undefined behavior in the loop
      init'ing avelocities, thanks to a -Waggressive-loop-optimizations
      warning from gcc-4.8.
    * update version date stamp to 2013-03-15.

2013-03-10 (SVN):
    * oslibs/dos/libwatt32: delete empty object files from the archive.

2013-03-10 (SVN):
    * gl_vidamiga.c: cleanups from Szilard Biro.

2013-03-10 (SVN):
    * pr_edict.c: if progs.dat exists, accept maplist.txt only if it is
      from the same game directory as progs.dat itself or if it is from
      a searchpath with a higher priority.

2013-03-10 (SVN):
    * [gl_|sv_]model.c: change the 'ignored' messages from external lit
      and ent files back to developer mode.

2013-03-10 (SVN):
    * update version date stamp to 2013-03-10.

2013-03-10 (SVN):
    * update the Mac OS X icon. add some more under engine/resource/.

2013-03-08 (SVN):
    * docs/README.hwsv, hw/mapcycle.cfg: fix a typo in sample rotation.
    * hw/client.hc, dmlevels.hc: properly simplify map cycling stuff.
    * siege/client.hc, dmlevels.hc: minor map cycling stuff, and add
      some FIXME notes.

2013-03-08 (SVN):
    * hw/client.hc (NextLevel): set SFL_NEW_UNIT unconditionally because
      we may not have to call FindDMLevel().

2013-03-08 (SVN):
    * gamecode: increment version to 1.28. revert Kor Skarn's method of
      abusing strings.txt for map cycling: it was intrusive and unsafe
      and ugly. the hw and siege hcode now use the standart quakeworld
      method of localinfo variables: see client.hc:NextLevel().