@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2013-04-02 (SVN):
+    * gl_vidamiga.c, gl_vidnt.c, gl_vidsdl.c (VID_ConWidth): change mask
+      to ~7 when making vid.conwidth a multiple of eight. (from tyrquake
+      git repo.)
+
+2013-04-02 (SVN):
     * keys.c (Key_Message): move backspace handling before non-printable
       check. (the functionality doesn't change. from tyrquake git repo.)
 
